Fix header link spacing

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 :any-link {
-  display: contents;
+  display: inline-block;
   text-decoration: none;
   color: var(--color-link);
   padding: var(--size-padding-hard);
